fix: wrong color variable names

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,19 +2,19 @@
 
 :root {
   --background: #f6f6f6;
+  --foreground: #333333;
   --pink-50: #f3eaea;
   --pink-100: #ddd5d5;
   --blue-100: #d5dce9;
-  --foreground: #333333;
 }
 
 @theme inline {
   --color-*: initial;
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --color-pink-50: var(--color-pink-50);
-  --color-pink-100: var(--color-pink-100);
-  --color-pink-100: var(--color-blue-100);
+  --color-pink-50: var(--pink-50);
+  --color-pink-100: var(--pink-100);
+  --color-blue-100: var(--blue-100);
 
   --font-sans: var(--font-bellota);
   --font-mono: var(--font-iosevka);
